2004-04-02  Jean-Pierre Roux
     * ADD gdcmData/E00001S03I0015.dcm for SQ checking purpose
     
2004-04-02  Jean-Pierre Roux
     * ADD : Test/checksequence.sh, for a general recap on SQ pb
     * FIX : gdcmParser::WriteEntryTagVRLength emprovement of special treatement
             for Philips spurious Tag fffe|0000 while rewritting Dicom files
	     
2004-03-30  Jean-Pierre Roux
     * FIX gdcmParser::ReplaceOrCreateByNumber shouldn't seg fault any more 
         for ACR file, written out as DICOM files (hope so...)

2004-03-30  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
     * src/gdcmParser.[cxx|h] and gdcmHeader.[cxx.h]: gdcmHeader::Write split
       in WriteEntryTagVRLength and WriteEntryValue. Those methods were
       moved to base class gdcmParser and only the specialisation is kept
       in gdcmHeader.
     * src/gdcmParser.[cxx|h]: ReplaceOrCreateByNumber(char*, guint16, guint16)
       trashed out (because ReplaceOrCreateByNumber(string, guint16, guint16)
       already does the job.
     * src/gdcmDicomDir.[cxx|h]: WriteDicomDirEntries renamed to WriteEntries
       (to be consistent with gdcmParser::WriteEntries).

2004-03-30 Benoit Regrain
     * vtk/vtkGdcmReader.[h|cxx] : fix the read of 3 gdcmHeader when making an
       upate of the object's instance. It's passed to 2 in the unfavorable
       case : one in the ExecuteInformation, one in the ExecuteData

2004-03-29  Jean-Pierre Roux
     * ENH : Check on file type to be written moved
             from gdcmParser::WriteEntry to gdcmParser::WriteEntries
     * FIX : gdcmObject::ResetBoundaries now stops properly
             when end-of-list is reached
	   : gdcmVersion modified (as Benoit Regrain asked)

2004-03-29  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
     * src/gdcmParser.cxx: removal of all TAB character. Indentation fixed.
     * src/gdcmUtil.cxx: added forgotten iostream include.
     * src/gdcmCommon.h: FileType enum entry DICOMDIR removed (since