@@ -5,6 +5,7 @@ metaElem    0002 0003 ""                     // Media Stored SOP Instance UID  :
 metaElem    0002 0010 "1.2.840.10008.1.2.1"  // Transfer Syntax UID i.e. : Explicit VR - Little Endian
 metaElem    0002 0012 ""                     // Implementation Class UID : may be forged later
 metaElem    0002 0013 "gdcmLib "             // Implementation Version Name  don't remove trailing space !
+metaElem    0002 0016 " "                    // Source Application Entity Title (our ?)
 metaElem    0004 1130 ""                     // File-set ID
 metaElem    0004 1200 "0"                    // Offset of the first dir of root dir entity : to be computed later
 metaElem    0004 1202 "0"                    // Offset of the last dir of root dir entity : to be computed later
@@ -12,8 +13,8 @@ metaElem    0004 1212 "0"                    // File-set consistency flag
 metaElem    0004 1220 "123456879"            // Directory record sequence : *length* to be set later
 
 patientElem fffe e000 "0"
-patientElem 0004 1400 "0"                    // Offset of next directory record : to be computed later
-patientElem 0004 1410 "65535"                // Record in use flag : 65535    ?
+patientElem 0004 1400 "0"                    // Offset of next directory record : = 0x0 : fffe e00d at end !
+patientElem 0004 1410 "65535"                // Record in use flag : 65535 = 0xFFFF (see 03_10PU.PDF p 31)
 patientElem 0004 1420 "0"                    // Offset of referenced lower-level dir entity : to be computed later
 patientElem 0004 1430 "PATIENT "             // Directory Record Type    don't remove trailing space !
 patientElem 0008 0005 "ISO_IR 100"           // Specific Character Set
@@ -24,8 +25,8 @@ patientElem 0010 0040 ""                     // Patient's Sex
 patientElem fffe e00d "0"
 
 studyElem   fffe e000 "0"
-studyElem   0004 1400 "0"                    // Offset of next directory record : to be computed later
-studyElem   0004 1410 "65535"                // Record in use flag : 65535    ?
+studyElem   0004 1400 "0"                    // Offset of next directory record : = 0x0 : fffe e00d at end !
+studyElem   0004 1410 "65535"                // Record in use flag : 65535 = 0xFFFF (see 03_10PU.PDF p 31)
 studyElem   0004 1420 "0"                    // Offset of referenced lower-level dir entity : to be computed later
 studyElem   0004 1430 "STUDY "               // Directory Record Type    don't remove trailing space !
 studyElem   0008 0005 "ISO_IR 100"           // Specific Character Set
@@ -34,42 +35,42 @@ studyElem   0008 0030 ""                     // Study Time
 studyElem   0008 0050 ""                     // Accession Number
 studyElem   0008 1030 ""                     // Study Description
 studyElem   0020 000d ""                     // Study Instance UID : may be forged later
-studyElem   0020 0010 ""                     // Study ID : may be forged later
+studyElem   0020 0010 ""                     // Study ID :           may be forged later
 studyElem   fffe e00d "0"
 
 serieElem   fffe e000 "0"
-serieElem   0004 1400 "0"                    // Offset of next directory record : to be computed later
-serieElem   0004 1410 "65535"                // Record in use flag : 65535    ?
+serieElem   0004 1400 "0"                    // Offset of next directory record : = 0x0 : fffe e00d at end !
+serieElem   0004 1410 "65535"                // Record in use flag : 65535 = 0xFFFF (see 03_10PU.PDF p 31)
 serieElem   0004 1420 "0"                    // Offset of referenced lower-level dir entity : to be computed later
 serieElem   0004 1430 "SERIES"               // Directory Record Type    don't add trailing space !
 serieElem   0008 0005 "ISO_IR 100"           // Specific Character Set
 serieElem   0008 0021 ""                     // Series Date
 serieElem   0008 0031 ""                     // Series Time
 serieElem   0008 0060 ""                     // Modality
-serieElem   0008 0080 ""                     // Institution Name  : may be forged later
+serieElem   0008 0080 ""                     // Institution Name  :   may be forged later
 serieElem   0008 0081 ""                     // Institution Address : may be forged later
 serieElem   0008 103e ""                     // Series Description :  may be forged later
 serieElem   0020 000e ""                     // Series Instance UID : may be forged later
-serieElem   0020 0011 "0"                    // Series Number : may be forged later
+serieElem   0020 0011 "0"                    // Series Number :       may be forged later
 serieElem   fffe e00d "0"
 
 imageElem   fffe e000 "0"
-imageElem   0004 1400 "0"                    // Offset of next directory record : to be computed later
-imageElem   0004 1410 "65535"                // Record in use flag : 65535    ?
+imageElem   0004 1400 "0"                    // Offset of next directory record : = 0x0 : fffe e00d at end !
+imageElem   0004 1410 "65535"                // Record in use flag : 65535 = 0xFFFF (see 03_10PU.PDF p 31)
 imageElem   0004 1420 "0"                    // Offset of referenced lower-level dir entity : to be computed later
 imageElem   0004 1430 "IMAGE "               // Directory Record Type    don't remove trailing space !
-imageElem   0004 1500 ""                     // Referenced File ID : to be set later  =  relative File Name
+imageElem   0004 1500 ""                     // Referenced File ID : will be set later  =  relative File Name
 imageElem   0004 1510 ""                     // Referenced SOP Class UID in File : may be forged later
 imageElem   0004 1511 ""                     // Referenced SOP Instance UID in File : may be forged later
 imageElem   0004 1512 ""                     // Referenced Transfer Syntax in File
 imageElem   0008 0005 "ISO_IR 100"           // Specific Character Set
 imageElem   0008 0008 ""                     // Image Type
-imageElem   0008 0016 ""                     // SOP Class UID : to be set/forged later
+imageElem   0008 0016 ""                     // SOP Class UID :    to be set/forged later
 imageElem   0008 0018 ""                     // SOP Instance UID : to be set/forged later
 imageElem   0008 0023 ""                     // Content Date
 imageElem   0008 0033 ""                     // Content Time
-imageElem   0008 1040 ""                     // Referenced Image Sequence : to be set/forged later
-imageElem   0008 1150 ""                     // Referenced SOP Class UID : to be set/forged later
+imageElem   0008 1040 ""                     // Referenced Image Sequence :   to be set/forged later
+imageElem   0008 1150 ""                     // Referenced SOP Class UID :    to be set/forged later
 imageElem   0008 1155 ""                     // Referenced SOP Instance UID : to be set/forged later
 imageElem   0020 0013 "0"                    // Image Number
 imageElem   0020 0032 "1.0\1.0\1.0 "         // Image Position Patient
